@@ -1,5 +1,10 @@
 2007-03-13  Quentin Mathe <qmathe@club-internet.fr>
 
+	* Headers/IKIcon.h: Updated formatting and indentation to be cleaner and
+	match GNUstep coding style rules.
+
+2007-03-13  Quentin Mathe <qmathe@club-internet.fr>
+
 	* Source/IKIcon.m (-initWithIdentifier:, -update): Updated to use 
 	IKIconTheme and -[NSImage imageNamed:] only as a fallback.
 
